--- a/environments/magento2/magento2.base.yml
+++ b/environments/magento2/magento2.base.yml
@@ -17,7 +17,15 @@ services:
       - traefik.http.services.${WARDEN_ENV_NAME}-livereload.loadbalancer.server.port=35729
     environment:
       - MAGE_DEBUG_SHOW_ARGS=1
+      - AWS_REGION=${AWS_REGION:-}
+      - AWS_BUCKET=${AWS_BUCKET:-}
+      - AWS_ACCESS_KEY=${AWS_ACCESS_KEY:-}
+      - AWS_SECRET_KEY=${AWS_SECRET_KEY:-}
 
   php-debug:
     environment:
       - MAGE_DEBUG_SHOW_ARGS=1
+      - AWS_REGION=${AWS_REGION:-}
+      - AWS_BUCKET=${AWS_BUCKET:-}
+      - AWS_ACCESS_KEY=${AWS_ACCESS_KEY:-}
+      - AWS_SECRET_KEY=${AWS_SECRET_KEY:-}
