--- a/.github/workflows/docker-image-php-fpm.yml
+++ b/.github/workflows/docker-image-php-fpm.yml
@@ -1,7 +1,7 @@
 name: Docker Image PHP-FPM
 on:
   schedule:
-  - cron: "0 6 1 * *"   # 6 AM UTC on 1st day of month
+    - cron: "0 6 * * MON"   # 6 AM UTC on Monday
   push:
     paths:
     - version
@@ -25,6 +25,8 @@ jobs:
         PHP_VARIANT: ${{ matrix.php_variant }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
 
   magento1:
     name: PHP-FPM ${{ matrix.php_version }} (magento1)
@@ -41,6 +43,8 @@ jobs:
         PHP_VERSION: ${{ matrix.php_version }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
 
   magento2:
     name: PHP-FPM ${{ matrix.php_version }} (magento2)
@@ -57,3 +61,5 @@ jobs:
         PHP_VERSION: ${{ matrix.php_version }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
