Update roost configuring

--- a/images/php-fpm/magento2/Dockerfile
+++ b/images/php-fpm/magento2/Dockerfile
@@ -34,11 +34,11 @@ RUN ln -s /usr/local/bin/n98-magerun /usr/local/bin/mr
 
 RUN set -eux \
     && PHP_VERSION=$(php -v | head -n1 | cut -d' ' -f2 | awk -F '.' '{print $1$2}') \
-    && if (( ${PHP_VERSION} >= 73 )); then \
-        mkdir -p /usr/local/bin \
-          && curl -s -L https://github.com/findcanary/roost/releases/latest/download/roost.phar > /usr/local/bin/roost \
-          && chmod +x /usr/local/bin/roost \
-          && curl -s -L https://raw.githubusercontent.com/findcanary/roost/master/roost.completion | tee /etc/bash_completion.d/roost \
+    && if (( ${PHP_VERSION} >= 73 )); \
+        then mkdir -p /usr/local/bin \
+            && curl -s -L https://github.com/findcanary/roost/releases/latest/download/roost.phar > /usr/local/bin/roost \
+            && chmod +x /usr/local/bin/roost \
+            && curl -s -L https://raw.githubusercontent.com/findcanary/roost/master/roost.completion | tee /etc/bash_completion.d/roost; \
     fi
 
 USER www-data
