--- a/.github/workflows/docker-image-elasticsearch.yml
+++ b/.github/workflows/docker-image-elasticsearch.yml
@@ -9,6 +9,7 @@ on:
     - images/elasticsearch/**
     branches:
     - develop
+  workflow_dispatch:
 jobs:
   elasticsearch:
     name: Elasticsearch
@@ -20,3 +21,5 @@ jobs:
         BUILD_GROUP: elasticsearch
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
