--- a/images/varnish/6.0/Dockerfile
+++ b/images/varnish/6.0/Dockerfile
@@ -13,8 +13,13 @@ RUN curl -s "${RPM_SCRIPT}" | bash \
 
 ENV VCL_CONFIG      /etc/varnish/default.vcl
 ENV CACHE_SIZE      256m
-ENV VARNISHD_PARAMS -p default_ttl=3600 -p default_grace=3600 \
-    -p feature=+esi_ignore_https -p feature=+esi_disable_xml_check
+ENV VARNISHD_PARAMS \
+    -p default_ttl=3600 \
+    -p default_grace=3600 \
+	-p http_resp_hdr_len=65536 \
+	-p http_resp_size=98304 \
+    -p feature=+esi_ignore_https \
+    -p feature=+esi_disable_xml_check
 
 COPY default.vcl /etc/varnish/default.vcl.template
 
