--- a/.github/workflows/docker-image-mailhog.yml
+++ b/.github/workflows/docker-image-mailhog.yml
@@ -9,6 +9,7 @@ on:
     - images/mailhog/**
     branches:
     - develop
+  workflow_dispatch:
 jobs:
   mailhog:
     name: Mailhog
@@ -20,3 +21,5 @@ jobs:
         BUILD_GROUP: mailhog
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
