--- a/.github/workflows/docker-image-mysql.yml
+++ b/.github/workflows/docker-image-mysql.yml
@@ -9,6 +9,7 @@ on:
     - images/mysql/**
     branches:
     - develop
+  workflow_dispatch:
 jobs:
   mysql:
     name: MySQL
@@ -20,3 +21,5 @@ jobs:
         BUILD_GROUP: mysql
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
