--- a/.github/workflows/docker-image-rabbitmq.yml
+++ b/.github/workflows/docker-image-rabbitmq.yml
@@ -9,6 +9,7 @@ on:
     - images/rabbitmq/**
     branches:
     - develop
+  workflow_dispatch:
 jobs:
   rabbitmq:
     name: RabbitMQ
@@ -20,3 +21,5 @@ jobs:
         BUILD_GROUP: rabbitmq
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
