--- a/.github/workflows/docker-image-varnish.yml
+++ b/.github/workflows/docker-image-varnish.yml
@@ -9,6 +9,7 @@ on:
     - images/varnish/**
     branches:
     - develop
+  workflow_dispatch:
 jobs:
   varnish:
     name: Varnish
@@ -20,3 +21,5 @@ jobs:
         BUILD_GROUP: varnish
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+        WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
