--- a/environments/magento2/magento2.base.yml
+++ b/environments/magento2/magento2.base.yml
@@ -2,7 +2,7 @@ version: "3.5"
 services:
   nginx:
     environment:
-      - NGINX_PUBLIC=/pub
+      - NGINX_PUBLIC=${NGINX_PUBLIC:-/pub}
       - NGINX_TEMPLATE=magento2.conf
 
   php-fpm:
