--- a/environments/magento2/magento2.mutagen.yml
+++ b/environments/magento2/magento2.mutagen.yml
@@ -19,8 +19,7 @@ sync:
         - "/pub/media"
         - "/pub/static/**"
         - "!/pub/static/.htaccess"
-        - "/var/**"
-        - "!/var/.htaccess"
+        - "/var"
 
     permissions:
       defaultFileMode: "0644"
