Add the ability to enable debug mode with autostart

--- a/images/php-fpm/context/debug/etc/php.d/15-xdebug.ini
+++ b/images/php-fpm/context/debug/etc/php.d/15-xdebug.ini
@@ -2,6 +2,7 @@
 zend_extension=xdebug.so
 
 xdebug.remote_enable="on"
+xdebug.remote_autostart="on"
 xdebug.remote_connect_back="on"
 xdebug.remote_addr_header="HTTP_X_DEBUG_HOST"
 xdebug.idekey="PHPSTORM"
