--- a/images/php-fpm/context/xdebug3/etc/php.d/15-xdebug.ini
+++ b/images/php-fpm/context/xdebug3/etc/php.d/15-xdebug.ini
@@ -1,6 +1,7 @@
 ; Enable xdebug extension module
 zend_extension=xdebug.so
 
+xdebug.start_with_request=yes
 xdebug.discover_client_host="on"
 xdebug.client_discovery_header="HTTP_X_DEBUG_HOST"
 xdebug.idekey="PHPSTORM"
