--- a/environments/includes/varnish.base.yml
+++ b/environments/includes/varnish.base.yml
@@ -17,3 +17,6 @@ services:
       - traefik.http.routers.${WARDEN_ENV_NAME}-varnish.rule=
           HostRegexp(`{subdomain:.+}.${TRAEFIK_DOMAIN}`) || Host(`${TRAEFIK_DOMAIN}`)
       - traefik.http.services.${WARDEN_ENV_NAME}-varnish.loadbalancer.server.port=80
+    environment:
+      - HTTP_RESP_HDR_LEN=${WARDEN_VARNISH_HTTP_RESP_HDR_LEN:-8k}
+      - HTTP_RESP_SIZE=${WARDEN_VARNISH_HTTP_RESP_SIZE:-32k}
