Add mysqld settings to db compose

--- a/environments/magento2/db.base.yml
+++ b/environments/magento2/db.base.yml
@@ -10,3 +10,14 @@ services:
       - mysqld
       - --max_allowed_packet=1024M
       - --explicit_defaults_for_timestamp=on
+      - --innodb_strict_mode=off
+      - --query_cache_limit=64M
+      - --query_cache_size=512M
+      - --query_cache_type=1
+      - --table_open_cache=100
+      - --wait_timeout=28800
+      - --tmp_table_size=1G
+      - --max_heap_table_size=1G
+      - --innodb_buffer_pool_size=1536M
+      - --innodb_log_buffer_size=128M
+      - --innodb_lock_wait_timeout=200
