Update elasticsearch config

--- a/environments/includes/elasticsearch.base.yml
+++ b/environments/includes/elasticsearch.base.yml
@@ -12,6 +12,8 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - "ES_JAVA_OPTS=-Xms${WARDEN_ELASTICSEARCH_JAVA_XMS:-512m} -Xmx${WARDEN_ELASTICSEARCH_JAVA_XMX:-512m}"
+      - cluster.routing.allocation.disk.threshold_enabled=false
+      - index.blocks.read_only_allow_delete
     volumes:
       - esdata:/usr/share/elasticsearch/data
 
