--- a/.github/workflows/docker-image-php-fpm.yml
+++ b/.github/workflows/docker-image-php-fpm.yml
@@ -29,6 +29,24 @@ jobs:
         DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
         WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
 
+  laravel:
+    name: PHP-FPM ${{ matrix.php_version }} (laravel)
+    runs-on: ubuntu-latest
+    needs: php-fpm
+    strategy:
+      matrix:
+        php_version: ["7.2", "7.3", "7.4", "8.0", "8.1"]
+    steps:
+      - uses: actions/checkout@v1
+      - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
+        env:
+          BUILD_GROUP: php-fpm/laravel
+          PHP_VERSION: ${{ matrix.php_version }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
+          WARDEN_IMAGE_REPOSITORY: ${{ secrets.IMAGE_REPOSITORY }}
+
   magento1:
     name: PHP-FPM ${{ matrix.php_version }} (magento1)
     runs-on: ubuntu-latest
