--- a/.github/workflows/docker-image-php-fpm.yml
+++ b/.github/workflows/docker-image-php-fpm.yml
@@ -18,7 +18,9 @@ jobs:
       matrix:
         php_version: ["7.2", "7.3", "7.4", "8.0", "8.1"]
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v2
+    - uses: docker/setup-buildx-action@v2
     - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
       env:
         BUILD_GROUP: php-fpm
@@ -37,7 +39,9 @@ jobs:
       matrix:
         php_version: ["7.2", "7.3", "7.4", "8.0", "8.1"]
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
       - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
         env:
           BUILD_GROUP: php-fpm/laravel
@@ -55,7 +59,9 @@ jobs:
       matrix:
         php_version: ["7.2", "7.3", "7.4", "8.0", "8.1"]
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v2
+    - uses: docker/setup-buildx-action@v2
     - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
       env:
         BUILD_GROUP: php-fpm/magento1
@@ -73,7 +79,9 @@ jobs:
       matrix:
         php_version: ["7.2", "7.3", "7.4", "8.0", "8.1"]
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+    - uses: docker/setup-qemu-action@v2
+    - uses: docker/setup-buildx-action@v2
     - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
       env:
         BUILD_GROUP: php-fpm/magento2
