--- a/.github/workflows/docker-image-mariadb.yml
+++ b/.github/workflows/docker-image-mariadb.yml
@@ -44,4 +44,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           build-args: MARIADB_VERSION=${{ matrix.version }}
           push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
-          tags: docker.io/wardenenv/mariadb:${{ matrix.version }}
+          tags: docker.io/ytorbyk/mariadb:${{ matrix.version }}
