--- a/.github/workflows/docker-image-rabbitmq.yml
+++ b/.github/workflows/docker-image-rabbitmq.yml
@@ -39,4 +39,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           build-args: RABBITMQ_VERSION=${{ matrix.version }}
           push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
-          tags: docker.io/wardenenv/rabbitmq:${{ matrix.version }}
+          tags: docker.io/ytorbyk/rabbitmq:${{ matrix.version }}
