--- a/.github/workflows/docker-image-redis.yml
+++ b/.github/workflows/docker-image-redis.yml
@@ -41,4 +41,4 @@ jobs:
           platforms: linux/amd64,linux/arm64
           build-args: REDIS_VERSION=${{ matrix.version }}
           push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
-          tags: docker.io/wardenenv/redis:${{ matrix.version }}
+          tags: docker.io/ytorbyk/redis:${{ matrix.version }}
