--- a/.github/workflows/docker-image-elasticsearch.yml
+++ b/.github/workflows/docker-image-elasticsearch.yml
@@ -37,7 +37,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        if: ${{ !env.ACT }}
 
       - name: Set build-args
         run: |-
@@ -53,5 +52,5 @@ jobs:
           context: images/elasticsearch
           platforms: linux/amd64,linux/arm64
           build-args: ES_VERSION=${{ env.ES_VERSION }}
-          push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
+          push: true
           tags: docker.io/ytorbyk/elasticsearch:${{ matrix.version }}
