--- a/.github/workflows/docker-image-mailhog.yml
+++ b/.github/workflows/docker-image-mailhog.yml
@@ -29,12 +29,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        if: ${{ !env.ACT }}
 
       - uses: docker/build-push-action@v2
         with:
           context: images/mailhog
           platforms: linux/amd64,linux/arm64
           build-args: MAILHOG_VERSION=${{ matrix.version }}
-          push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
+          push: true
           tags: docker.io/ytorbyk/mailhog:${{ matrix.version }}
