--- a/.github/workflows/docker-image-mariadb.yml
+++ b/.github/workflows/docker-image-mariadb.yml
@@ -36,12 +36,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        if: ${{ !env.ACT }}
 
       - uses: docker/build-push-action@v2
         with:
           context: images/mariadb
           platforms: linux/amd64,linux/arm64
           build-args: MARIADB_VERSION=${{ matrix.version }}
-          push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
+          push: true
           tags: docker.io/ytorbyk/mariadb:${{ matrix.version }}
