--- a/.github/workflows/docker-image-nginx.yml
+++ b/.github/workflows/docker-image-nginx.yml
@@ -34,12 +34,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        if: ${{ !env.ACT }}
 
       - uses: docker/build-push-action@v2
         with:
           context: images/nginx
           platforms: linux/amd64,linux/arm64
           build-args: NGINX_VERSION=${{ matrix.version }}
-          push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
+          push: true
           tags: docker.io/ytorbyk/nginx:${{ matrix.version }}
