--- a/.github/workflows/docker-image-opensearch.yml
+++ b/.github/workflows/docker-image-opensearch.yml
@@ -31,7 +31,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        if: ${{ !env.ACT }}
 
       - name: Set build-args
         run: |-
@@ -47,5 +46,5 @@ jobs:
           context: images/opensearch
           platforms: linux/amd64,linux/arm64
           build-args: OPENSEARCH_VERSION=${{ env.OPENSEARCH_VERSION }}
-          push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
+          push: true
           tags: docker.io/ytorbyk/opensearch:${{ matrix.version }}
