--- a/.github/workflows/docker-image-rabbitmq.yml
+++ b/.github/workflows/docker-image-rabbitmq.yml
@@ -31,12 +31,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        if: ${{ !env.ACT }}
 
       - uses: docker/build-push-action@v2
         with:
           context: images/rabbitmq
           platforms: linux/amd64,linux/arm64
           build-args: RABBITMQ_VERSION=${{ matrix.version }}
-          push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
+          push: true
           tags: docker.io/ytorbyk/rabbitmq:${{ matrix.version }}
