--- a/.github/workflows/docker-image-redis.yml
+++ b/.github/workflows/docker-image-redis.yml
@@ -33,12 +33,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-        if: ${{ !env.ACT }}
 
       - uses: docker/build-push-action@v2
         with:
           context: images/redis
           platforms: linux/amd64,linux/arm64
           build-args: REDIS_VERSION=${{ matrix.version }}
-          push: ${{ github.ref == 'refs/heads/develop' && !env.ACT }}
+          push: true
           tags: docker.io/ytorbyk/redis:${{ matrix.version }}
