Add the ability to change ES_JAVA_OPTS, update elasticsearch config

--- a/environments/magento2/init.env
+++ b/environments/magento2/init.env
@@ -20,6 +20,9 @@ VARNISH_VERSION=7.1
 
 WARDEN_SYNC_IGNORE=
 
+WARDEN_ELASTICSEARCH_JAVA_XMS=
+WARDEN_ELASTICSEARCH_JAVA_XMX=
+
 WARDEN_ALLURE=0
 WARDEN_SELENIUM=0
 WARDEN_SELENIUM_DEBUG=0
