--- a/environments/includes/opensearch.base.yml
+++ b/environments/includes/opensearch.base.yml
@@ -12,7 +12,9 @@ services:
     environment:
       - DISABLE_SECURITY_PLUGIN=true
       - discovery.type=single-node
-      - "ES_JAVA_OPTS=-Xms64m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms${WARDEN_ELASTICSEARCH_JAVA_XMS:-64m} -Xmx${WARDEN_ELASTICSEARCH_JAVA_XMX:-512m}"
+      - cluster.routing.allocation.disk.threshold_enabled=false
+      - index.blocks.read_only_allow_delete
     volumes:
       - osdata:/usr/share/opensearch/data
 
